tests/Parsing/type-conflict.fab
#
# RUN: %fab --format=null %s 2> %t.err || true
# RUN: FileCheck %s -input-file %t.err
#

# CHECK: {{/.*}}.fab:{{[0-9:]+}}: error: assigning int to value of type string
foo:string = 42;
